# MakeSkillsBest

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_EN.md  ROADMAP.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: gardener.toml
.claude/hooks/: hooks.json  session-start.sh
.codex-plugin/: plugin.json
.cursor/rules/: gardener.md
commands/: garden.toml  gardener.toml
docs/: architecture.md  loop-state-schema.md  philosophy.md  setup-guide.md
hooks/: claude-gardener-hooks.json  gardener-activate.js
scripts/: generate_scene_overview.py  monitor_visual_logs.mjs  run_visual_stage_tests.mjs  test_claude_hook_phase_mapping.mjs  test_config_api_persistence.mjs  test_explicit_phase_writer.mjs  test_service_mode.mjs  test_visual_hook_e2e.mjs  verify_sprites.py
skills/context-gardener/: SKILL.md  gardener.sh
skills/engineering-loop/: SKILL.md
skills/gardener-act/: SKILL.md
skills/gardener-decide/: SKILL.md
skills/gardener-diagnose/: SKILL.md
skills/gardener-learn/: SKILL.md
skills/gardener-observe/: SKILL.md
skills/gardener-plan/: SKILL.md
skills/gardener-verify/: SKILL.md
skills/implementation-map/: SKILL.md
skills/knowledge-graph/: SKILL.md
skills/log-journal/: SKILL.md
src/: __init__.py  analyser.py  config.py  gardener_state.py  main.py  scanner.py  sprite_processor.py  web_runtime.py
summary/: README.md  architecture.md  asset-pipeline.md  config-rules.md  loop-engineering.md  prompts.md  user-journey.md
web/: index.html  package-lock.json  package.json  vite.config.ts
(+38 files in other folders)
