[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-gardener"
version = "0.1.0"
description = "🌱 Context Gardener — A cute 2D garden that visualizes your project's context file health"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
]

[project.scripts]
gardener = "src.main:cli"
gardener-garden = "src.main:garden"

[tool.setuptools.packages.find]
include = ["src*"]
