[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "little-gardener"
version = "0.1.0"
description = "Little Gardener - a Web Canvas loop visualizer for project context health"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
garden-python = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
